# project-morpheus

./: .cursorignore  .gitignore  README.md  main.py  may14th.csv  pyproject.toml
components/reader/: .env  README.md
components/reader/apple_watch/: feature_extraction.py
components/reader/apple_watch/data_splits/: data_split.npz  data_split.pkl  split_info.json
components/reader/fitbit/: api_call.py  sleep_stage_analysis.ipynb
components/sleep_analysis/: .gitignore  README.md  apple_health_sleep_analyzer.py  hello.py  models.py  morpheus_session_1771401783.json  morpheus_session_1771491471.json  pyproject.toml  rem_detection_viz.py  rem_estimator.py
components/ui_mobile/: .gitignore  App.tsx  HomeScreen.tsx  README.md  SETUP_GUIDE.md  app.json  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
components/ui_mobile/android/: settings.gradle
components/ui_mobile/components/: BottomNav.tsx  SleepChart.tsx  WheelPicker.tsx
components/ui_mobile/docs/: CHANGELOG.md  README.md  configurable-settings.md  healthkit-integration.md  homescreen.md  ios-build.md
components/ui_mobile/hooks/: useSleepData.ts
components/ui_mobile/ios/: Podfile
components/ui_mobile/screens/: HistoryScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx
components/ui_mobile/services/: healthKitService.ts
components/ui_mobile/types/: health.ts
components/writer/: README.md  pyproject.toml
components/writer/soundcore_a20/: testing.py
components/writer/src/: __init__.py  app.py  audio_player.py  edit_data.py  scheduler.py
tasks/: plan.md
(+83 files in other folders)
