[project]
name = "project-morpheus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "simpleaudio>=1.0.4",
    "xgboost>=3.2.0",
    "tqdm>=4.66.0",
    "torch>=2.10.0",
]
[project.optional-dependencies]
neural = ["torch>=2.0.0"]
