[project]
name = "writer"
version = "0.1.0"
description = "Audio scheduler application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "pydub>=0.25.1",
    "pyqt5>=5.15.11",
    "simpleaudio>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.build]
working_dir = "."
